WedBars 1.16.5 Changelog

1.16.5-0.01
- Formal port to 1.16.5
- Changed versioning system to better accommodate different game versions
- Changed spawn eggs from shops to no longer be generic
- Glass is no longer blastproof (temporary until new solution is found)
- Fixed some visual bugs
- Beds are now colored by team color
- Health label under name changed from "HP" to unicode heart
- Fixed a bug causing an out of bounds error if only one arena is available
- Tuned fireball and TNT damage to be a bit more reasonable
- Fixed a bug causing lobbies to autostart instantly
- Fixed some scoreboard flickering with the updating timer