@@ -11,18 +11,18 @@ public class ArenaBed {
 
 		//TODO: beds not working period now?? for no reason lmao
 		BlockState b = locs[0].getBlock().getState();
-		//BlockState bh = locs[1].getBlock().getState();
-		
+		BlockState bh = locs[1].getBlock().getState();
+
 		b.setType(bed);
 		//bh.setType(bed);
-//		bh.setType(Material.BED_BLOCK);
-//
-//		byte[] data = bedDirectionData(locs[0], locs[1]);
-//
-//		bf.setRawData(data[0]);
-//		bh.setRawData(data[1]);
-//		bf.update(true, false);
-//		bh.update(true, true);
+		bh.setType(bed);
+
+		byte[] data = bedDirectionData(locs[0], locs[1]);
+
+		b.setRawData(data[0]);
+		bh.setRawData(data[1]);
+		b.update(true, false);
+		bh.update(true, true);
 		
 	}
 	
