@@ -1,25 +1,24 @@
 package com.blockhead7360.mc.wedbars.game;
 
 import org.bukkit.Location;
-import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import com.blockhead7360.mc.wedbars.api.events.GeneratorSpawnItemEvent;
 
 public class Generator {
-	
+
 	private Location location;
 	private int speed;
-	
+
 	private int curTimeLeft;
-	
+
 	public Generator(Location location, int speed) {
-		
+
 		this.location = location;
 		this.speed = speed;
 		this.curTimeLeft = 1;
-		
+
 	}
 
 	public Location getLocation() {
@@ -42,54 +41,45 @@ public class Generator {
 	}
 
 	public boolean passTime() {
-		
+
 		curTimeLeft--;
-				
+
 		if (curTimeLeft <= 0) {
-			
+
 			curTimeLeft = speed;
 			return true;
-			
+
 		}
-		
+
 		return false;
 	}
-	
-	public void spawnItem(ItemStack item, boolean hasItemMeta) {
-		
+
+	public void spawnItem(ItemStack item, boolean hasItemMeta, boolean asterisk) {
+
 		GeneratorSpawnItemEvent gsie = new GeneratorSpawnItemEvent(this, item);
-		
+
 		if (gsie.isCancelled()) return;
 
-		// TODO: make sure this doesn't cause issues. main goal is to differentiate diamonds and
-		//  emeralds from iron and gold since these can't be split
-		// There is in fact an issue; generated diamonds really enjoy stacking with dropped diamonds
-		// when stacks are on the ground and multiple blocks apart. Then again, could be paper being paper.
-		// Either way, the correct amount is generated.
+		if (asterisk) {
+			ItemMeta meta = item.getItemMeta();
 
-		if (item.getType() == Material.DIAMOND || item.getType() == Material.EMERALD) {
-			location.getWorld().dropItem(location, item);
-			return;
+			if (hasItemMeta) {
+
+				meta.setDisplayName(meta.getDisplayName() + " *");
+
+			} else {
+
+				meta.setDisplayName(" *");
+
+			}
+
+			item.setItemMeta(meta);
 		}
-		
-		ItemMeta meta = item.getItemMeta();
-		
-		if (hasItemMeta) {
-			
-			meta.setDisplayName(meta.getDisplayName() + " *");
-			
-		} else {
-			
-			meta.setDisplayName(" *");
-			
-		}
-		
-		item.setItemMeta(meta);
-		
+
 		location.getWorld().dropItem(location, item);
-		
-		
-		
+
+
+
 	}
 
 	public int getCurTimeLeft() {
@@ -100,7 +90,7 @@ public class Generator {
 	public void setCurTimeLeft(int curTimeLeft) {
 		this.curTimeLeft = curTimeLeft;
 	}
-	
-	
-	
+
+
+
 }
