@@ -377,13 +377,15 @@ public class Shop implements Listener {
 							ChatColor.GRAY + "Price: " + ChatColor.GOLD + "7 gold"),
 					Utility.createIconItemStack(Material.DIAMOND_SWORD, 1, ChatColor.YELLOW + "Diamond Sword", "",
 							ChatColor.GRAY + "Price: " + ChatColor.GREEN + "4 emerald"),
+					Utility.createIconItemStack(Material.SHIELD, 1, ChatColor.YELLOW + "Shield", "",
+							ChatColor.GRAY + "Price: " + ChatColor.GREEN + "10 iron"),
 					Utility.createEnchantedItemStack(Material.STICK, 1, ChatColor.YELLOW + "Knockback Stick",
 							new EnchantmentSet[] {new EnchantmentSet(Enchantment.KNOCKBACK, 1)}, "",
 							ChatColor.GRAY + "Price: " + ChatColor.GOLD + "5 gold")
 
 			};
 
-			for (int i = 0; i < 4; i++) {
+			for (int i = 0; i < 5; i++) {
 
 				inv.setItem(19 + i, m[i]);
 
